# reimagined-guacamole

./: CMakeLists.txt  run-httpd.sh
htdocs/: index.html  script.js  style.css
nar-httpd/: .gitignore  Dockerfile  dhparams.pem
src/: CMakeLists.txt  Settings.hpp  SettingsDescription.cpp  SettingsDescription.hpp  SharedState.hpp  WsAcceptor.cpp  WsAcceptor.hpp  WsConnection.cpp  WsConnection.hpp  nar-messages.proto  nar-server.cpp
